@@ -18,7 +18,14 @@ VIEWING THE RECORDING
     an argument. Press 'q' to quit or any other key to step to the next
     event. Press 's' to skip any events in the current file until end of
     recording. Press 'a' to toggle wether we should skip whatever is in @INC
-    when the recorder what loaded.
+    when the recorder what loaded. Press 'h' for help.
+
+    The environment variable RR_AUTORUN tells the viewer to run automaticly.
+    The value should be the sleep time until stepping. And yes, it uses
+    Time::HiRes so you can give it fracitonal seconds.
+
+    If you set RR_SKIP_INC the autorun will not show @INC files as the 'a'
+    option does.
 
 TODO
     Record more things such as changes to variables, opened file descriptors
