@@ -20,7 +20,7 @@ our @EXPORT = qw(
 	
 );
 
-our $VERSION = '0.02';
+our $VERSION = '0.03';
 
 sub AUTOLOAD {
     # This AUTOLOAD is used to 'autoload' constants from the constant()
@@ -73,6 +73,12 @@ Use the 'rr-viewer' tool. It just takes the path with the recording as an argume
 Press 'q' to quit or any other key to step to the next event. Press 's' to skip any 
 events in the current file until end of recording. Press 'a' to toggle wether we should 
 skip whatever is in @INC when the recorder what loaded. Press 'h' for help.
+
+The environment variable RR_AUTORUN tells the viewer to run automaticly. The value 
+should be the sleep time until stepping. And yes, it uses Time::HiRes so you can 
+give it fracitonal seconds.
+
+If you set RR_SKIP_INC the autorun will not show @INC files as the 'a' option does.
 
 =head1 TODO
 
